tests/baselines/reference/differentTypesWithSameName.errors.txt
tests/cases/compiler/differentTypesWithSameName.ts(16,15): error TS2345: Argument of type 'variable' is not assignable to parameter of type 'm.variable'.
  Property 's' is missing in type 'variable' but required in type 'm.variable'.


==== tests/cases/compiler/differentTypesWithSameName.ts (1 errors) ====
    module m {
      export class variable{
        s: string;
      }
      export function doSomething(v: m.variable) {
        
      }
    }
    
    class variable {
     t: number;
    }
    
    
    var v: variable = new variable();
    m.doSomething(v);
                  ~
!!! error TS2345: Argument of type '{|variable|0|}' is not assignable to parameter of type '{|m|1|}.{|variable|2|}'.
!!! error TS2345:   Property 's' is missing in type 'variable' but required in type 'm.variable'.
!!! related TS2728 tests/cases/compiler/differentTypesWithSameName.ts:3:5: 's' is declared here.
!!! annotated symbol 0 tests/cases/compiler/differentTypesWithSameName.ts:10:7
!!! annotated symbol 1 tests/cases/compiler/differentTypesWithSameName.ts:1:8
!!! annotated symbol 2 tests/cases/compiler/differentTypesWithSameName.ts:2:16